# cifra-backend

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: requirements.txt
app/core/: settings.py  urls.py
app/markets/: admin.py  models.py
core/: __init__.py  admin.py  settings.py  urls.py
core/api/: apps.py  urls.py
core/faker/: __init__.py  faker_image.py  initializer.py
core/filters/: __init__.py  parameterized.py  search.py  utils.py
core/images/: base64.py  core_utils.py
core/jobs/: celery.py
core/mailer/: __init__.py  apps.py  email_template.py  tasks.py
core/permissions/: __init__.py  apps.py  has_at_least_one_school.py  has_school_permission.py  is_school_employee.py  is_student_or_responsible.py
core/readonly_admin/: __init__.py  admin.py  apps.py
core/swagger/: apps.py  urls.py
core/tests/: __init__.py  pagination_mixin.py  test_case.py
core/validators/: __init__.py  apps.py  cnpj_validator.py  cpf_validator.py  is_png.py  mac_address.py  phone_validator.py  postal_code.py
docs/: Category_update_svg_attributes.md  drf_rw_serializers.md  generate_historic_instances.md  parameterized_filters.md
entrypoints/: api.sh
features/address/: admin.py  apps.py  forms.py  models.py  serializers.py
features/authentication/: apps.py  backends.py  schemas.py  serializers.py  urls.py  views.py
features/lists/: admin.py  apps.py  models.py  serializers.py  urls.py  viewsets.py
templates/: create_logistic_account.html  sign-up-logistic.html
(+75 files in other folders)
